# elements

./: .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
elements/: asgi.py  settings.py  urls.py  wsgi.py
elements/api/: apps.py  models.py  serializers.py  tests.py  views.py
elements/api/migrations/: 0001_initial.py
elements/api/test_data/: testdata.csv
scripts/: update_db.sh
